<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.nozzha.presentation_rc.MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:alpha="0.5"
        android:src="@drawable/ic_nozzha_prc" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7">

            <EditText
                android:id="@+id/ipAddressET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="IP Address"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3">

            <EditText
                android:id="@+id/portET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Port"
                android:inputType="number" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/whatIsThis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:onClick="onClick"
        android:text="@string/what_is_this_link"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/connect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"
        android:onClick="onClick"
        android:text="Connect" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/slides_control_buttons"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFAAAAAA" />

    <TextView
        android:id="@+id/aboutLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:onClick="onClick"
        android:layout_marginTop="20dp"
        android:text="@string/about_link" />

</LinearLayout>
